src/objects/Contract__c.object
<CustomObject>
    <description>Custom object to track New Beginnings Contracts. Each contract will have one or more outcomes and each outcome will have one or more milestones.</description>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Renewable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Contract Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date for contract.</description>
        <inlineHelpText>End date for contract.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Source__c</fullName>
        <description>A subgroup within an organization (division from a dept.).</description>
        <inlineHelpText>A subgroup within an organization (division from a dept.).</inlineHelpText>
        <label>Fund Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Account_Number__c</fullName>
        <description>Internal Account Number associated w/ contract</description>
        <inlineHelpText>Internal Account Number associated w/ contract</inlineHelpText>
        <label>Internal Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <description>This formula will indicate if the contract is locked and cannot be modified.</description>
        <formula>Lock_Contract__c</formula>
        <inlineHelpText>This formula will indicate if the contract is locked and cannot be modified.</inlineHelpText>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lock contract down do that no template outcomes or template milestones can be added, modified or deleted.</description>
        <inlineHelpText>Lock contract down do that no template outcomes or template milestones can be added, modified or deleted. User cannot change any other information about the contract.</inlineHelpText>
        <label>Lock Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <label>Reporting Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly outcome progress report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annual outcome report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual success story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual participant demographic data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Invoice Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Status Report (Milestones)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Year Expenditure Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year-End Expenditure Report</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for the contract.</description>
        <inlineHelpText>Start date for the contract.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Templ_Milestones__c</fullName>
        <inlineHelpText>Total Number of Milestones for the Contract</inlineHelpText>
        <label>Total Number of Template Milestones</label>
        <summarizedField>Template_Outcome__c.Total_Number_of_Milestones__c</summarizedField>
        <summaryForeignKey>Template_Outcome__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Template_Outcomes__c</fullName>
        <label>Total Number of Template Outcomes</label>
        <summaryForeignKey>Template_Outcome__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Amount__c</columns>
        <columns>Contract_Number__c</columns>
        <columns>Description__c</columns>
        <columns>IsLocked__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01If00000004WYWEA2_00Nf0000000MOHUEA4</fullName>
        <active>true</active>
        <errorMessage>Only locked, active contracts can be added to Service Participations.</errorMessage>
        <field>ContractParticipation__c.Contract__c</field>
        <filterItems>
            <field>Contract__c.IsLocked__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contract__c.Status__c</field>
            <operation>equals</operation>
            <value>Renewed, New</value>
        </filterItems>
        <infoMessage>Only locked, active contracts can be added to Service Participations.</infoMessage>
        <isOptional>false</isOptional>
        <name>Contract Participation_Contract</name>
    </namedFilters>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>